<resources>
    <string name="app_name">MathOperationProject</string>
    <string name="input_x_edit_text">Please Enter X</string>
    <string name="input_y_edit_text">Please Enter Y</string>
    <string name="addition_text_view"></string>
    <string name="subtraction_text_view"></string>
    <string name="multiplication_text_view"></string>
    <string name="division_text_view"></string>
    <string name="mathOperation_text_view">Math Operations</string>

    <string name="calculator_button">Calculate</string>

</resources>